previous versions of Octave, these functions returned a hg group of patch
graphics objects for all graphics toolkits.

- The function `saveas` now defaults to saving in Octave figure format
(.ofig) rather than PDF (.pdf).

- The additional property "contextmenu" has been added to all graphics
objects.  It is equivalent to the previously used "uicontextmenu"
property which is hidden now.

- Additional properties have been added for the `axes` graphics object:
    * "alphamap" (not yet implemented)
    * "alphascale" (not yet implemented)
    * "colorscale" (not yet implemented)
    * "fontsizemode" (not yet implemented)
    * "innerposition" (equivalent to "position")
    * "interactions" (not yet implemented)
    * "layout" (not yet implemented)
    * "legend" (not yet implemented)
    * "nextseriesindex" (read-only, used by `scatter` graphics objects)
    * "positionconstraint" (replacement for "activepositionproperty"
      which is now a hidden property.  No plans for removal.)
    * "toolbar" (not yet implemented)
    * "xaxis" (not yet implemented)
    * "yaxis" (not yet implemented)
    * "zaxis" (not yet implemented)

### Alphabetical list of new functions added in Octave 7

* `getpixelposition`
* `endsWith`
* `listfonts`
* `memory`
* `rng`
* `startsWith`
* `streamribbon`

### Deprecated functions and properties

The following functions and properties have been deprecated in Octave 7
and will be removed from Octave 9 (or whatever version is the second
major release after 7):

- Functions

  Function               | Replacement
  -----------------------|------------------
                         |

- Properties

  Object           | Property      | Value
  -----------------|---------------|------------
                   |               |

### Removed functions and properties

The following functions and properties were deprecated in Octave 5
and have been removed from Octave 7.

- Functions

  Function                 | Replacement